<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Bar&amp;coToTurin</string>
    <string name="welcome">Welcome</string>
    <string name="enter">Enter</string>
    <string name="birthYear">Birth year:</string>
    <string name="InvalidLogin">Invalid login!</string>
    <string name="error">Error!</string>
    <string name="loggedIn">Logged in!</string>
    <string name="register">Register</string>
    <string name="sign_up">Register</string>
    <string name="email">email</string>
    <string name="password">password</string>
    <string name="action_sign_in_short">action_sign_in_short</string>
    <string name="name">name</string>
    <string name="age">age</string>
    <string name="error_invalid_password">Invalid password!</string>
    <string name="error_invalid_email">Invalid email!</string>
    <string name="error_invalid_nickname">Invalid nickname!</string>
    <string name="preference_file_key" translatable="false">myFile</string>
</resources>