<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context="com.example.svilupposw.pagelogin.MainActivity"
    android:background="#b4c3e9">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/welcome"
        android:id="@+id/textView2"
        android:layout_alignParentTop="true"
        android:layout_alignEnd="@+id/button"
        android:layout_gravity="center_horizontal"
        android:textSize="30dp"
        android:textColor="#ffffff" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="E-mail:"
        android:id="@+id/textView"
        android:layout_below="@+id/textView2"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="25dp"
        android:layout_gravity="center_horizontal"
        android:textColor="#ffffff"
        android:drawableLeft="@drawable/mail"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textEmailAddress"
        android:ems="10"
        android:id="@+id/editText2"
        android:layout_below="@+id/textView"
        android:layout_centerHorizontal="true"
        android:textColor="#ffffff" />

    <TextView
        android:layout_width="180dp"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="Password:"
        android:id="@+id/textView3"
        android:layout_marginTop="25dp"
        android:layout_below="@+id/textView"
        android:layout_centerHorizontal="true"
        android:layout_gravity="center_horizontal"
        android:textColor="#ffffff"
        android:drawableLeft="@drawable/password" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:ems="10"
        android:id="@+id/editText"
        android:layout_below="@+id/textView3"
        android:layout_alignStart="@+id/editText2"
        android:textColor="#ffffff" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/enter"
        android:id="@+id/buttonLogin"
        android:layout_below="@+id/editText"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="35dp"
        android:layout_gravity="center_horizontal"
        android:allowUndo="false"
        android:background="#fabf0f"
        android:textColor="#ffffff" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/register"
        android:id="@+id/buttonRegister"
        android:layout_below="@+id/editText"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="55dp"
        android:layout_gravity="center_horizontal"
        android:allowUndo="false"
        android:background="#fabf0f"
        android:textColor="#ffffff" />

</LinearLayout>
